// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Snapshots should apply 'border' appearance classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary checkbox--border"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--critical"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'default' appearance classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'lg' size classes 1`] = `
<div>
  <label
    class="checkbox checkbox--lg checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'md' size classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'sm' size classes 1`] = `
<div>
  <label
    class="checkbox checkbox--sm checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should apply 'success' skin classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--success"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should render additional classes 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary other-class"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should render loading 1`] = `
<div>
  <label
    class="checkbox checkbox--loading checkbox--md checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <div
        class="spinner spinner--white spinner--xs checkbox__spinner"
      >
        <svg
          class="spinner__svg"
          fill="currentColor"
          height="20"
          viewBox="0 0 48 48"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="24"
            cy="4"
            r="4"
          />
          <circle
            cx="12.19"
            cy="7.86"
            r="3.7"
          />
          <circle
            cx="5.02"
            cy="17.68"
            r="3.4"
          />
          <circle
            cx="5.02"
            cy="30.32"
            r="3.1"
          />
          <circle
            cx="12.19"
            cy="40.14"
            r="2.8"
          />
          <circle
            cx="24"
            cy="44"
            r="2.5"
          />
          <circle
            cx="35.81"
            cy="40.14"
            r="2.2"
          />
          <circle
            cx="42.98"
            cy="30.32"
            r="1.9"
          />
          <circle
            cx="42.98"
            cy="17.68"
            r="1.6"
          />
          <circle
            cx="35.81"
            cy="7.86"
            r="1.3"
          />
        </svg>
      </div>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox Snapshots should renders default component 1`] = `
<div>
  <label
    class="checkbox checkbox--md checkbox--primary"
  >
    <input
      class="checkbox__input"
      type="checkbox"
      value=""
    />
    <span
      class="checkbox__control"
    >
      <svg
        class="checkbox__svg"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="checkbox__text"
    >
      Checkbox
    </div>
  </label>
</div>
`;
